# YAALC

./: Cargo.toml
src/: anilist.rs  app.rs  db.rs  main.rs  terminal.rs
src/anilist/: auth.rs  filters.rs  queries.rs
