[package]
name = "yaalc"
version = "0.1.0"
authors = ["MatiF100 <mateuszfesz@wp.pl>"]
edition = "2018"
repository = "https://github.com/MatiF100/YAALC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1.1", features = ["full"]}
serde_json = "1.0.61"
reqwest = "0.11.0"
tui = {version = "0.14.0", default-features = false, features = ['crossterm'] }
crossterm = "0.19.0"
serde = {version = "1.0.123", features = ["derive"]}
serde_derive = "1.0.123"